--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,31 @@
 @import url(../vendor/inter/inter.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__logo/profile__logo.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__navigation/profile__navigation.css);
+@import url(../blocks/profile/__open-popup/profile__open-popup.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__plus/profile__plus.css);
+@import url(../blocks/elments/elments.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__rectangel/element__rectangel.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__button/element__button.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks//popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__is-opened/popup__is-opened.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__info/popup__info.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
