--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -4,7 +4,7 @@
     width: 358px;
     height: 50px;
     margin-top: 48px;
-    margin-bottom: 37px;   
+    margin-bottom: 37px;
 }
 
 .popup__submit-button:hover {
@@ -18,3 +18,4 @@
         margin-top: 45px;
         margin-bottom: 25px;
     }
+}
