--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -5,10 +5,19 @@
     height: 50px;
     margin-top: 48px;
     margin-bottom: 37px;
+    cursor: pointer;
+    border: none;
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 0;
 }
 
 .popup__submit-button:hover {
-    opacity: 0.6;
+    opacity: 0.8;
+    transition: opacity 1s linear 0.5s;
 }
 
 @media screen and (max-width: 550px) {
@@ -17,5 +26,7 @@
         height: 46px;
         margin-top: 45px;
         margin-bottom: 25px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
