--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -7,13 +7,16 @@
     height: 19px;
     background-image: url(../../../images/like.png);
     background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 .element__button:hover {
-    opacity: 0.6;
+    opacity: 0.5;
+    transition: opacity 1s linear 0.5s;
 }
 
 .element__button:active {
     background-image: url(../../../images/black_like.svg);
     opacity: 1;
+    transition: opacity 1s linear 0.5s;
 }
