--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,8 @@
     max-width: 880px;
     margin: 0 auto;
     padding-top: 45px;
-    padding-bottom: 40px;
+    padding-bottom: 41px;
+    border-bottom: 1px solid #545454;
 }
 
 @media screen and (max-width: 950px) {
@@ -21,6 +22,6 @@
     .header {
         max-width: 320px;
         padding-top: 28px;
-        padding-bottom: 42px;
+        padding-bottom: 31.6px;
     }
 }
