--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -9,10 +9,12 @@
     padding: 0;
     right: -40px;
     top: -40px;
+    cursor: pointer;
 }
 
 .popup__close-button:hover {
     opacity: 0.6;
+    transition: opacity 1s linear 0.5s;
 }
 
 @media screen and (max-width: 550px) {
