--- a/blocks/popup/__info/popup__info.css
+++ b/blocks/popup/__info/popup__info.css
@@ -5,6 +5,11 @@
     border-bottom: 1px solid;
     margin-top: 30px;
     padding-bottom: 13px;
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
 }
 
 @media screen and (max-width: 550px) {
