--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -6,11 +6,16 @@
     border-bottom: 1px solid;
     margin-top: 54px;
     padding-bottom: 13px;
+    font-family: 'Inter', 'Arial', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
 }
 
 @media screen and (max-width: 550px) {
     .popup__name {
         width: 238px;
-        margin-top: 75px;
+        margin-top: 75px;        
     }
 }
