--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -6,17 +6,22 @@
     align-self: center;
     margin-left: auto;
     background-repeat: no-repeat;
-    background-size: cover;
     padding: 0;
+    cursor: pointer;
+    background-image: url(../../../images/plus.svg);
+    background-size: 22px;
+    background-position: center;
 }
 
 .profile__button:hover {
     opacity: 0.6;
+    transition: opacity 1s linear 0.5s;
 }
 
 @media screen and (max-width: 650px) {
     .profile__button {
         margin: 24px auto 0;
-        width: 282px;  
+        width: 282px;
+        background-size: 17px;
     }
 }
