--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,16 +3,19 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 21.78px;
     color: #FFFFFF;
     margin: 0;
     padding-top: 16px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 650px) {
     .profile__subtitle {
         font-size: 14px;
-        line-height: 17px;
+        line-height: 16.94px;
         text-align: center;
         margin-top: 26px;
         padding: 0;
