--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,12 +8,15 @@
     margin: 0;
     display: flex;
     flex-wrap: nowrap;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 650px) {
     .profile__title {
         font-size: 27px;
-        line-height: 33px;
+        line-height: 32.68px;
         text-align: center;
     }
 }
