--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 50px;
+    padding-top: 40px;
 }
 
 @media screen and (max-width: 650px) {
@@ -18,5 +19,6 @@
 @media screen and (max-width: 450px) {
     .profile {
         max-width: 282px;
+        padding-top: 42px;
     }
 }
