--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -10,6 +10,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 336px;
 }
 
 @media screen and (max-width: 650px) {
@@ -19,5 +20,11 @@
         text-align: center;
         margin-top: 26px;
         padding: 0;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .profile__subtitle {
+        max-width: 282px;
     }
 }
