--- a/pages/index.css
+++ b/pages/index.css
@@ -18,15 +18,31 @@
 @import url(../blocks/element/__rectangel/element__rectangel.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__button/element__button.css);
+@import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks//popup/popup.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__is-opened/popup__is-opened.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__info/popup__info.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/popup-plus/popup-plus.css);
+@import url(../blocks/popup-plus/__close-button/popup-plus__close-button.css);
+@import url(../blocks/popup-plus/__form/popup-plus__form.css);
+@import url(../blocks/popup-plus/__container/popup-plus__container.css);
+@import url(../blocks/popup-plus/__title/popup-plus__title.css);
+@import url(../blocks/popup-plus/__name/popup-plus__name.css);
+@import url(../blocks/popup-plus/__info/popup-plus__info.css);
+@import url(../blocks/popup-plus/__submit-button/popup-plus__submit-button.css);
+@import url(../blocks/spot/spot.css);
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__opened/popup-image__opened.css);
+@import url(../blocks/popup-image/__close-button/popup-image__close-button.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/__big/popup-image__big.css);
+@import url(../blocks/popup-image/__text/popup-image__text.css);
+@import url(../blocks/popup/__is-opened/popup__is-opened.css);
