--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,17 +1,16 @@
-.popup {
+.popup-image {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;    
+    height: 100%;
     justify-content: center;
     align-items: center;
     background-color:rgba(0, 0, 0, 0.5);
     overflow: auto;
     z-index: 3;
     visibility: hidden;
-    transition: visibility 1s linear, opacity 1s;
+    transition: visibility 1s linear, opacity 1s linear;
     opacity: 0;
     display: flex;
 }
-
