--- a/blocks/popup-plus/popup-plus.css
+++ b/blocks/popup-plus/popup-plus.css
@@ -1,9 +1,9 @@
-.popup {
+.popup-plus {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;    
+    height: 100%;
     justify-content: center;
     align-items: center;
     background-color:rgba(0, 0, 0, 0.5);
@@ -14,4 +14,3 @@
     opacity: 0;
     display: flex;
 }
-
