--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -1,6 +1,6 @@
 .close-button {
     background-color: rgba(0, 0, 0, 0.5);
-    background-image: url(../../../images/Close.svg);
+    background-image: url(../../images/Close.svg);
     background-size: cover;
     position: absolute;
     border: none;
