--- a/blocks/popup-plus/__info/popup-plus__info.css
+++ b/blocks/popup-plus/__info/popup-plus__info.css
@@ -2,7 +2,7 @@
     width: 358px;
     padding: 0;
     border: none;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid red;
     margin-top: 29.74px;
     padding-bottom: 13.34px;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -10,6 +10,10 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
+}
+
+.popup-plus__info:hover {
+    border-bottom:1px solid black;
 }
 
 @media screen and (max-width: 550px) {
