--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     padding: 0;
     border: none;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid red;
     margin-top: 54px;
     padding-bottom: 13px;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -11,6 +11,10 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
+}
+
+.popup__name:hover {
+    border-bottom:1px solid black;
 }
 
 @media screen and (max-width: 550px) {
