--- a/blocks/popup-plus/__name/popup-plus__name.css
+++ b/blocks/popup-plus/__name/popup-plus__name.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     padding: 0;
     border: none;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid black;
     margin-top: 54px;
     padding-bottom: 13.26px;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -13,10 +13,6 @@
     line-height: 17px;
 }
 
-.popup-plus__name:hover {
-    border-bottom:1px solid black;
-}
-
 @media screen and (max-width: 550px) {
     .popup-plus__name {
         width: 238px;
@@ -24,4 +20,8 @@
         padding-bottom: 13px;
         line-height: 16.94px;
     }
+}
+
+.popup-plus__name:invalid {
+    border-bottom-color: red;
 }
