--- a/blocks/popup/__info/popup__info.css
+++ b/blocks/popup/__info/popup__info.css
@@ -2,7 +2,7 @@
     width: 358px;
     padding: 0;
     border: none;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid black;
     margin-top: 30px;
     padding-bottom: 13px;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -12,12 +12,12 @@
     line-height: 17px;
 }
 
-.popup__info:hover {
-    border-bottom:1px solid black;
-}
-
 @media screen and (max-width: 550px) {
     .popup__info {
         width: 238px;
     }
+}
+
+.popup__info:invalid {
+    border-bottom-color: red;
 }
