--- a/pages/index.css
+++ b/pages/index.css
@@ -43,4 +43,6 @@
 @import url(../blocks/popup-image/__container/popup-image__container.css);
 @import url(../blocks/popup-image/__big/popup-image__big.css);
 @import url(../blocks/popup-image/__text/popup-image__text.css);
+@import url(../blocks/popup/__set/popup__set.css);
+@import url(../blocks/error/error.css);
 @import url(../blocks/popup/__is-opened/popup__is-opened.css);
