--- a/blocks/error/error.css
+++ b/blocks/error/error.css
@@ -1,12 +1,9 @@
-.form__input-error {
-    font-family: 'Inter', 'Arial', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FF0000;
-    margin-top: 5px;
-    display: flex;
-    align-self: start;
-    margin-left: 0;
+.error {
+    min-height: 48px;
+}
+
+@media screen and (max-width: 550px) {
+    .error {
+        min-height: 45px;
+    }
 }
