--- a/blocks/popup-plus/__info/popup-plus__info.css
+++ b/blocks/popup-plus/__info/popup-plus__info.css
@@ -2,8 +2,7 @@
     width: 358px;
     padding: 0;
     border: none;
-    border-bottom: 1px solid black;
-    margin-top: 29.74px;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     padding-bottom: 13.34px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
@@ -15,7 +14,6 @@
 @media screen and (max-width: 550px) {
     .popup-plus__info {
         width: 238px;
-        margin-top: 30px;
         padding-bottom: 13px;
         line-height: 16.94px;
     }
