--- a/blocks/popup-plus/__name/popup-plus__name.css
+++ b/blocks/popup-plus/__name/popup-plus__name.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     padding: 0;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(0,0,0,0.2);;
     margin-top: 54px;
     padding-bottom: 13.26px;
     font-family: 'Inter', 'Arial', sans-serif;
