--- a/blocks/popup/__info/popup__info.css
+++ b/blocks/popup/__info/popup__info.css
@@ -2,8 +2,7 @@
     width: 358px;
     padding: 0;
     border: none;
-    border-bottom: 1px solid black;
-    margin-top: 30px;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     padding-bottom: 13px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
