--- a/pages/index.css
+++ b/pages/index.css
@@ -27,7 +27,6 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__info/popup__info.css);
-@import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/close-button/close-button.css);
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/popup-plus/popup-plus.css);
@@ -36,7 +35,6 @@
 @import url(../blocks/popup-plus/__title/popup-plus__title.css);
 @import url(../blocks/popup-plus/__name/popup-plus__name.css);
 @import url(../blocks/popup-plus/__info/popup-plus__info.css);
-@import url(../blocks/popup-plus/__submit-button/popup-plus__submit-button.css);
 @import url(../blocks/spot/spot.css);
 @import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__opened/popup-image__opened.css);
@@ -44,5 +42,8 @@
 @import url(../blocks/popup-image/__big/popup-image__big.css);
 @import url(../blocks/popup-image/__text/popup-image__text.css);
 @import url(../blocks/popup/__set/popup__set.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__submit/form__submit.css);
 @import url(../blocks/error/error.css);
+@import url(../blocks/top/top.css);
 @import url(../blocks/popup/__is-opened/popup__is-opened.css);
