--- a/blocks/form/__input-error/_active/form__input-error_active.css
+++ b/blocks/form/__input-error/_active/form__input-error_active.css
@@ -1,4 +1,4 @@
-.popup__name {
+.form__input {
     width: 358px;
     margin: 0 auto;
     padding: 0;
@@ -13,11 +13,11 @@
 }
 
 @media screen and (max-width: 550px) {
-    .popup__name {
+    .form__input {
         width: 238px;      
     }
 }
 
-.popup__name:invalid {
+.form__input:invalid {
     border-bottom-color: red;
 }
