--- a/blocks/popup-plus/__title/popup-plus__title.css
+++ b/blocks/popup-plus/__title/popup-plus__title.css
@@ -1,6 +1,6 @@
 .popup-plus__title {
     width: 330px;
-    margin: 0 28px 0 0;
+    margin: 0 28px 54px 0;
     padding: 0;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
@@ -17,5 +17,6 @@
         font-size: 18px;
         line-height: 21.78px;
         margin-left: 22px;
+        margin-bottom: 75px;
     }
 }
