--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-    margin: 0;
+    margin: 0 0 54px 0;
     padding: 0;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
@@ -14,5 +14,6 @@
     .popup__title {
         font-size: 18px;
         line-height: 22px;
+        margin-bottom: 74px;
     }
 }
