--- a/src/blocks/form/__input-error/form__input-error.css
+++ b/src/blocks/form/__input-error/form__input-error.css
@@ -4,7 +4,6 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-    color: #FF0000;
     margin-top: 5px;
     display: flex;
     align-self: start;
@@ -12,4 +11,10 @@
     width: 358px;
     margin: 0 auto;
     padding: 0;
+}
+
+@media screen and (max-width: 550px) {
+    .form__input-error {
+        width: 238px;      
+    }
 }
