--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,6 +1,6 @@
 .form__input {
     width: 358px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     border: none;
     border-bottom: 1px solid rgba(0,0,0,0.2);
@@ -14,10 +14,7 @@
 
 @media screen and (max-width: 550px) {
     .form__input {
-        width: 238px;      
+        width: 238px;
+        margin: 30px 22px 0;     
     }
-}
-
-.form__input:invalid {
-    border-bottom-color: red;
 }
