--- a/src/blocks/profile/__logo/profile__logo.css
+++ b/src/blocks/profile/__logo/profile__logo.css
@@ -1,12 +1,8 @@
-.profile__logo {    
-    margin-right: 30px;
+.profile__logo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 60px;
-    width: 120px;
-    height: 120px;
-}
-
-@media screen and (max-width: 450px) {
-    .profile__logo {
-        margin: 0;
-    }
+    background-size: cover;
+    padding: 0;
 }
