--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/profile/__open-popup/profile__open-popup.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__logo-hover/profile__logo-hover.css);
 @import url(../blocks/elments/elments.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
@@ -48,4 +49,15 @@
 @import url(../blocks/error/error.css);
 @import url(../blocks/top/top.css);
 @import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/popup-delete/popup-delete.css);
+@import url(../blocks/popup-delete/__form/popup-delete__form.css);
+@import url(../blocks/popup-delete/__container/popup-delete__container.css);
+@import url(../blocks/popup-delete/__title/popup-delete__title.css);
+@import url(../blocks/popup-delete/__submit-button/popup-delete__submit-button.css);
+@import url(../blocks/popup-avatar/popup-avatar.css);
+@import url(../blocks/popup-avatar/__form/popup-avatar__form.css);
+@import url(../blocks/popup-avatar/__container/popup-avatar__container.css);
+@import url(../blocks/popup-avatar/__title/popup-avatar__title.css);
+@import url(../blocks/popup-avatar/__input/popup-avatar__input.css);
+@import url(../blocks/popup-avatar/__submit-button/popup-avatar__submit-button.css);
 @import url(../blocks/popup/__is-opened/popup__is-opened.css);
