--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,7 +18,9 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__rectangel/element__rectangel.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__button/element__button.css);
+@import url(../blocks/element/__number/element__number.css);
 @import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
