--- a/src/blocks/popup-avatar/__container/popup-avatar__container.css
+++ b/src/blocks/popup-avatar/__container/popup-avatar__container.css
@@ -1,4 +1,9 @@
 .popup-avatar__container {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    background-color: white;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
