--- a/src/blocks/popup-avatar/__submit-button/popup-avatar__submit-button.css
+++ b/src/blocks/popup-avatar/__submit-button/popup-avatar__submit-button.css
@@ -1,4 +1,9 @@
 .popup-avatar__submit-button {
-    margin-top: 48px;
-    margin-left: 36px
+    margin-bottom: auto;
+}
+
+@media screen and (max-width: 550px) {
+    .popup-avatar__submit-button {
+        margin-bottom: 36px;
+    }
 }
