--- a/src/blocks/popup-avatar/__title/popup-avatar__title.css
+++ b/src/blocks/popup-avatar/__title/popup-avatar__title.css
@@ -5,7 +5,15 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    margin-left: 36px;
-    margin-bottom: 54px;
-    margin-top: 0;
+    margin: 0 auto 54px 0;
+}
+
+@media screen and (max-width: 550px) {
+    .popup-avatar__title {
+        width: 238px;
+        font-size: 18px;
+        line-height: 21.78px;
+        margin-left: 22px;
+        margin-bottom: 75px;
+    }
 }
