--- a/src/blocks/form/__submit/form__submit.css
+++ b/src/blocks/form/__submit/form__submit.css
@@ -1,4 +1,4 @@
-.form-submit {
+.form__submit {
     background-color: black;
     color: white;
     width: 358px;
@@ -15,12 +15,12 @@
     transition: opacity 1s linear 0.5s;
 }
 
-.form-submit:hover {
+.form__submit:hover {
     opacity: 0.8;    
 }
 
 @media screen and (max-width: 550px) {
-    .form-submit {
+    .form__submit {
         width: 238px;
         height: 46px;
         margin-bottom: 25px;
@@ -29,7 +29,7 @@
     }
 }
 
-.form-submit_inactive {
+.form__submit_inactive {
     opacity: 0.2;
     color: black;
     background-color: white;
